--- a/src/css/blocks/tasks.css
+++ b/src/css/blocks/tasks.css
@@ -143,7 +143,7 @@
 }
 
 .card-text__descr {
-    /* display: box; */
+    display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
