--- a/src/css/bs-css/bs-blocks/bs-header.css
+++ b/src/css/bs-css/bs-blocks/bs-header.css
@@ -1,7 +1,3 @@
-* {
-    outline: 1px solid rgba(255, 0, 0, 0.1);
-}
-
 .btn-primary {
     --bs-btn-padding-x: 1.68rem;
     --bs-btn-padding-y: 0.75rem;
@@ -20,4 +16,10 @@
     --bs-nav-link-font-size: 1.06rem;
     --bs-nav-link-font-weight: 500;
     --bs-nav-link-color: #000000;
+}
+
+.navbar-toggler {
+    border: none;
+    border-radius: 0;
+    --bs-navbar-toggler-font-size: 2rem;
 }
