Исправит стили для текста

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -6,7 +6,7 @@
   --title-color: #fff;
 
   /* цвет подзаголовков */
-  --subtitle-color: #b4bbc5;
+  --subtitle-color: #f4f4f4;
 
   /*  blue color */
   --cds-blue-400: #0f62fe;
