--- a/src/css/blocks/tasks.css
+++ b/src/css/blocks/tasks.css
@@ -143,7 +143,7 @@
   font-size: 1.4rem;
   font-weight: 400;
   margin-bottom: 0.8rem;
-  color: var(--cds-grey-400);
+  color: var(--subtitle-color);
 }
 
 .card-text__descr {
@@ -170,7 +170,7 @@
 
 .km,
 .date {
-  color: var(--cds-grey-400);
+  color: var(--subtitle-color);
   font-size: 1.2rem;
   line-height: 14px;
 }
