--- a/src/css/blocks/tasks.css
+++ b/src/css/blocks/tasks.css
@@ -147,7 +147,7 @@
 }
 
 .card-text__descr {
-  display: box;
+  display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -231,13 +231,15 @@
 
 /* адаптив */
 @media screen and (max-width: 1220px) {
-  .card-wrapper {
+  .card-wrapper,
+  .swiper-slide {
     flex-basis: 32.5%;
   }
 }
 
 @media screen and (max-width: 968px) {
-  .card-wrapper {
+  .card-wrapper,
+  .swiper-slide {
     flex-basis: 49.5%;
     margin-bottom: 0.6rem;
   }
@@ -262,7 +264,8 @@
 }
 
 @media screen and (max-width: 500px) {
-  .card-wrapper {
+  .card-wrapper,
+  .swiper-slide {
     flex-basis: 100%;
     min-height: 46rem;
     margin-bottom: 1.4rem;
