feat: add pagination on clients section

--- a/src/sass/clients.sass
+++ b/src/sass/clients.sass
@@ -14,7 +14,6 @@ $font-family: 'Manrope', sans-serif
     color: $default-white
     font-family: $font-family
     font-size: 48px
-    font-style: normal
     font-weight: 800
     line-height: 64px
   &__table-2-row
@@ -48,32 +47,50 @@ $font-family: 'Manrope', sans-serif
     color: $text-gray-900
     font-family: $font-family
     font-size: 18px
-    font-style: normal
     font-weight: 500
     line-height: 28px
+    padding-bottom: 8px
   &__sentence
+    text-align: center
     color: $text-gray-900
     font-family: $font-family
     font-size: 14px
-    font-style: normal
     font-weight: 400
     line-height: 24px
   &__client
     display: flex
     justify-content: center
+    margin-bottom: 40px
   &__client-photo
     margin-right: 16px
   &__client-name
     color: $default-white
     font-family: $font-family
     font-size: 18px
-    font-style: normal
     font-weight: 700
     line-height: 28px
   &__client-specialization
     color: $default-white
     font-family: $font-family
     font-size: 14px
-    font-style: normal
     font-weight: 400
     line-height: 24px
+  &__pagination
+    display: flex
+    justify-content: space-between
+    margin: auto
+    width: 54px
+    padding: 0 0 80px
+  &__pagination-element
+    width: 8px
+    height: 8px
+    border: 2px solid $default-white
+    border-radius: 50%
+    opacity: 0.5
+    &_active
+      width: 8px
+      height: 8px
+      border: 2px solid $default-white
+      border-radius: 50%
+      background-color: $default-white
+      opacity: 1
